2007-01-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/dl-trampoline.S (_dl_runtime_profile): Use register
	names not numbers in cfi_*.

2007-01-26  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/sys/personality.h (ADDR_NO_RANDOMIZE,
	ADDR_LIMIT_3GB, PER_LINUX_32BIT, PER_LINUX32_3GB): Add.
	Correct values of PER_HPUX and PER_OSF4.

2007-01-24  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-minimal.c: Undefine _itoa first.
	* stdio-common/_itoa.h: Define _itoa and _fitoa for 64-bit platforms.
	* malloc/mtrace.c: Revert last change.
	* posix/wordexp.c: Likewise.

2007-01-24  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/bits/byteswap.h (__bswap_32): Add __nocona__, __core2__
	and __geode__ to the list of i486+ CPUs.
	* sysdeps/x86_64/bits/byteswap.h (__bswap_32): Likewise.

2007-01-23  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/_itoa.c: Include <limits.h>.
	* stdio-common/_itowa.c: Likewise.

2007-01-22  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/_itowa.c: Don't compile _itowa for 64-bit
	platforms.
	* stdio-common/_itoa.c: Don't compile in _itoa and _fitoa for
	64-bit platforms.
	* malloc/mtrace.c (tr_where): Use _fitoa_word instead of _fitoa if
	possible.
	* posix/wordexp.c (parse_arith): Use _itoa_word instead of _itoa
	if possible.

	[BZ #3902]
	* stdio-common/_itoa.c (_itoa): Make sure at least a zero is emitted.
	* stdio-common/Makefile (tests): Add bug17.
	* stdio-common/bug17.c: New file.

2007-01-19  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/brf.c: New file.
	* iconvdata/testdata/BRF: New file.
	* iconvdata/testdata/BRF..UTF8: New file.
	Contributed by Samuel Thibault <samuel.thibault@ens-lyon.org>.
	* iconvdata/Makefile: Add rules to build BRF.
	* iconvdata/TESTS: Add BRF entry.
	* iconvdata/gconv-modules: Likewise.
	* iconvdata/tst-tables.sh: Likewise.

2007-01-18  Anton Nikishaev  <anton.nik@gmail.com>

	* wcsmbs/wchar.h (wcstoll): Fix comment, function returns value of