@@ -1,3 +1,7 @@
+2007-01-30  Ulrich Drepper  <drepper@redhat.com>
+
+	* misc/hsearch_r.c (hdestroy_r): Remove unnecessary test.
+
 2007-01-26  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/i386/dl-trampoline.S (_dl_runtime_profile): Use register
